# deepseed2claude

./: .env.example  .gitignore  Cargo.toml  README.md
admin-ui/: index.html  package-lock.json  package.json  vite.config.ts
admin-ui/src/: main.tsx  styles.css
docs/: api-research.md  compatibility-design.md  spec.md
src/: admin.rs  anthropic.rs  assets.rs  config.rs  error.rs  lib.rs  main.rs  store.rs  upstream.rs
tests/: gateway.rs
