[package]
name = "deepseed2claude"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
bytes = "1"
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rand = "0.8"
rust-embed = { version = "8", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"

[[bin]]
name = "live-check"
path = "src/bin/live_check.rs"
